--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,4 +1,6 @@
-
+*{
+  font-family:Tahoma;
+}
 .search-wrapper {
     display: flex;
     flex-direction: column;
@@ -14,6 +16,8 @@
     }
   }
   
-body{ background-color:rgb(231, 234, 238);
+body { 
+    background-color:rgb(231, 234, 238);
+    
 
 }
