--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -1,39 +1,39 @@
 {% extends 'main.html' %}
 {% load static %}
 {% block content %}
+<!-- css to devide up page into columns and card into columns-->
 <style>  
     .home-container{
           display:grid;
-          grid-template-columns: 1.5fr 6fr 1.5fr;
-    
+          grid-template-columns: 3fr 4fr 3fr; 
       } 
     .card-content{
         display:grid;
         grid-template-columns: 0.5fr 3fr 5.5fr;
     }
 </style>
-<div class ="container">
+<!-- link to User profile page -->
+<div class ="container my-5">
+    <h1> Your profile </h1>
     {% if request.user %}
-     <a href="{% url 'user-profile' request.user.id %}">
-   {{request.user}}'s profile</a>
+     <a href="{% url 'user-profile' user.id %}"> {{request.user}}'s profile</a>
    {% endif %}
  </div>
-<div class ="container">
+ <!-- list of all users -->
+<div class ="container my-5">
 <h1> User list</h1>
 <br>
 <P> <b>This is the list of users. Click on the link of the user to check their profile and to follow.</b></P>
 </div>
-
-
+<!-- card for each user -->
 {% for profile in profile3 %}
-
 <div class ="home-container">
     <div></div>
         <div class="card my-2">
             <div class="card-content">
                 <div></div>
                 <div>
-                <img src ="{% static 'images/admin.jpg' %}" alt ="placeholder image" height= 48px>
+                <img src ="{% static 'images/default-profile-image.png' %}" alt ="placeholder image" height= 48px>
                 </div>
                 <a href="{% url 'user-profile' profile.id %}">
                 <div class="card-content">
@@ -43,11 +43,8 @@
             
             </div>
         </div>
-    <div>
-
-        
+    <div> 
     </div>
 </div>
 {% endfor %}
-
 {% endblock content %} 
