--- a/app/templates/app/profile_list.html
+++ b/app/templates/app/profile_list.html
@@ -1,21 +1,95 @@
 {% extends 'main.html' %}
 {% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
 {% block content %}
 
-<style>  
-  .home-container{
-        display:grid;
-        grid-template-columns: 1fr 4fr 4fr;
-    } 
-</style>
-<div class = "container my-5" >
-
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block additionalStyles %}
+    <!-- Link to css-->
+    <link rel="stylesheet" href="{% static 'app/css/forms.css' %}"/> 
+    {% endblock %}
+    <!--- css to devide up page into columns -->
+    <style>  
+      .home-container{
+            display:grid;
+            grid-template-columns: 0.5fr 4fr 0.5fr 5fr;
+        } 
+    </style>
+  </head>
+  <body>
+<div class = "container my-5 padding-bottom= 20pxs" >
   <div class ="home-container">
     <div></div>
-    <div>
-      <h2>{{ user|upper }}'s Profile </h2>
-          <br>
-          <img src ="{% static 'images/admin.jpg' %}" alt ="placeholder image" height =200px>
+    <div> 
+      <!-- follower and followed by lists -->    
+    {% if user %} 
+    <h2>{{ profiles.user }}'s Profile </h2>
+    <!-- left column -->
+    <div class ="card my-5" >
+      <div class="card-content">                    
+                <ul>     
+                  <!-- follow -->    
+                  <h3 style="font-size: large"> {{ profiles.user }} follows </h3>
+                    {% for following in profiles.follows.all %}
+                      {% if following != profiles %}
+                        <li>
+                          <a href = "{% url 'user-profile' following.id %}"> {{ following }} </a>                     
+                        </li>
+                      {% endif %}
+                    {% endfor %}
+                </ul>           
+                    <hr>
+                    <!-- follower -->
+                <ul>
+                  <h3 style ="font-size: large">{{ profiles.user }} is followed by </h3>
+                    {% for follower in profiles.followed_by.all %} 
+                      {% if follower != profiles %}            
+                        <li>
+                          <a href ="{% url 'user-profile' follower.id %}"> {{ follower }} </a>            
+                        </li>
+                      {% endif %}
+                    {% endfor %}         
+                </ul>                          
+          </a>
+        </div>
+    </div>  
+    {% else %}
+    <h2> {{request.user}} pofile</h2>
+    <div class ="card my-5" >
+      <div class="card-content ">  
+                <!-- user follows -->                  
+                <ul>               
+                  <h3 style="font-size: large"> {{ request.user }} follows </h3>                
+                    {% for following in profiles.follows.all %}
+                      {% if following != profiles %}
+                        <li>
+                          <a href = "{% url 'user-profile' following.id %}"> {{ following }} </a>                     
+                        </li>
+                      {% endif %}
+                    {% endfor %}
+                </ul>           
+                    <hr>
+                  <!-- follower -->
+                <ul>
+                  <h3 style ="font-size: large">{{ request.user }} is followed by </h3>
+                    {% for follower in profiles.followed_by.all %} 
+                      {% if follower != profiles %}            
+                        <li>
+                          <a href ="{% url 'user-profile' follower.id %}"> {{ follower }} </a>            
+                        </li>
+                      {% endif %}
+                    {% endfor %}
+                </ul>                         
+          </a>
+        </div>
+    </div>      
+    {% endif %}   
+    <!-- follow and unfollow button links -->     
       <form method="POST">
         {% csrf_token %}
         <div class="buttons has-addons my-5">
@@ -24,61 +98,47 @@
       </form>
       <form method="POST">
         {% csrf_token %}
-        <div class="buttons has-addons">
-          
-          <button class="button is-danger" name="action" value="unfollow">Unfollow</button>
-        
+        <div class="buttons has-addons">       
+          <button class="button is-danger" name="action" value="unfollow">Unfollow</button>     
         </div>
       </form>
       <div class="content">
-        {% for message in profile.user.message.all %}
-            <div class="box">
-                {{ message.body }}
-                <span class="is-small has-text-grey-light">
-                    ({{ message.created_at }})
-                </span>
-            </div>
-        {% endfor %}
       </div>    
     </div>
-    <div>  
-        <a href="{% url 'profile' %}">
-          <button class="button is-dark is-outlined is-fullwidth my-5">All Profiles</button>
-        </a>
-          <div class ="card" >
-            <div class="card-content">      
-                <figure class="image is-48x48"></figure>               
-                      <ul>
-                        <h3 style="font-size: large"> {{ user }} follows </h3>
-                          {% for following in profiles.follows.all %}
-                            {% if following != user %}
-                              <li>
-                                <a href = "{% url 'user-profile' following.id %}"> {{ following }} </a>                     
-                              </li>
-                            {% endif %}
-                          {% endfor %}
-                      </ul>           
-                          <hr>
-                      <ul>
-                        <h3 style ="font-size: large">{{ user }} is followed by </h3>
-                          {% for follower in profiles.followed_by.all %} 
-                            {% if follower != user %}            
-                              <li>
-                                <a href ="{% url 'user-profile' follower.id %}"> {{ follower }} </a>            
-                              </li>
-                            {% endif %}
-                          {% endfor %}
-                      </ul>                         
-                  
-                </a>
-              
-              </div>
-
-          </div>  
-
-
-          
+    <!-- end of left column-->
+    <div></div>
+    <!-- right column -->
+    <!-- link to user update form -->
+    <div class ="ProfileForm">  
+      <p>
+    <a href = "{% url 'update-user' %}">
+      <button class="button is-dark is-outlined is fullwidth my-5">Edit my profile</button>
+    </a>  
+  </p>  
+  <!-- user profile card for image, generation, bio and skills -->
+      {% if user.image %}
+        <img src ="{{user.image.url}}" alt ="placeholder image" height =200px /> 
+        {% endif %}
+        
+      <div class ="card my-5" >
+        Generation
+        <hr>
+          {{user.generation}}
+      </div>
+      <div class ="card my-5" >
+          Bio
+          <hr>
+           {{user.bio}}
+      </div>
+      <div class ="card my-5" >
+        Skill
+        <hr>
+         {{user.skill}}
+      </div>          
    </div>
+   <!-- end of right column -->
   </div>
+  {% endblock content %}
 </div>
-{% endblock content %}
+</body>
+</html>
