--- a/app/templates/app/update-user.html
+++ b/app/templates/app/update-user.html
@@ -1,6 +1,43 @@
 {% extends 'main.html'%}
-
+{% load static %}
 {% block content %}
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>update-user</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!--- css style link -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+      <link rel ='stylesheet' type='text/css' media='screen' href="{% static 'app/css/forms.css' %}">
+    </head>
+  <body>
+  <div>
+    <a href="{% url 'user-profile' user.id %}"> </a>
+      <div class="container">
+        <div class = "ProfileForm">
+          <form method="POST" action=""  enctype="multipart/form-data">
+            <!-- need this for Django security -->
+              {% csrf_token %}
+              <!-- Profile Form -->
+              {% for field in form %}   
+              <!--image, generation, bio and skills -->    
+              <div class="form__group">
+                  <label for="image">{{field.label}}</label>
+                  {{field}}
+              </div>              
+                {% endfor %}
+                <!--- cancel and submit button -->
+              <div class="form__action">
+                  <a class="btn btn--dark" href="{% url 'profile' %}">Cancel</a>
+                  <input class="btn btn-primary" type="submit" name="Update Information">
+              </div>
+          </form>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
 
 {% endblock content %} 
