removing user id number from user list

--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -37,7 +37,7 @@
                 </div>
                 <a href="{% url 'user-profile' profile.id %}">
                 <div class="card-content">
-                    {{profile.id}}{{profile.user.username}}<br>
+                    {{profile.user.username}}<br>
                 </div>
                 </a>
             
