--- a/app/templates/app/delete.html
+++ b/app/templates/app/delete.html
@@ -1,13 +1,13 @@
 {% extends 'main.html' %}
 
 {% block content %}
+<!-- generic delte page to delete messge, post or room -->
 <div class = "container">
-<form method = "POST" action= "">
-    {% csrf_token %}
-    <p> Are you sure you want to delete "{{ obj }}" ? </p>
-
-    <a href ="{{request.META.HTTP_REFERER}}"> Go Back</a>
-    <input type = "Submit" value="Confirm" />
-</form>
+    <form method = "POST" action= "">
+        {% csrf_token %}
+        <p> Are you sure you want to delete "{{ obj }}" ? </p>
+        <a href ="{{request.META.HTTP_REFERER}}"> Go Back</a>
+        <input type = "Submit" value="Confirm" />
+    </form>
 </div>
 {% endblock content %}
