--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -76,7 +76,7 @@
             <div class ="container">
             <h4>Help</h4>
             <video width ='320' controls>
-                <source src ="{% static 'images/Demo.mp4' %}" type='video/mp4'> </source>
+                <source src ="{% static 'images/' %}" type='video/mp4'> </source>
                 Video
             </video>
             <div class ="container my-5">
